network-policies/20-allow-same-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-same-namespace
  namespace: dev
spec:
  podSelector: {}
  ingress:
    - from:
        - podSelector: {}
  policyTypes: ["Ingress"]
